--- a/Facturacion/Datos/Datos.csproj
+++ b/Facturacion/Datos/Datos.csproj
@@ -76,6 +76,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ClienteDB.cs" />
+    <Compile Include="Clientes.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UsuarioDB.cs" />
   </ItemGroup>
